# chemistry

./: Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
src/chemistry_calculator/: mould_temperature.py  temp_rh_time.json  temp_rh_time.xlsx
src/chemistry_calculator/api/: main.py
src/chemistry_calculator_portal/: .eslintignore  Dockerfile  cloudbuild.yaml  package-lock.json  package.json  vite.config.ts
src/chemistry_calculator_portal/src/: app.html
src/chemistry_calculator_portal/src/component/: ClientPortal.svelte  MouldGraph.svelte  MouldPortal.svelte  OverviewGraph.svelte  OverviewPortal.svelte  TopBar.svelte  WaterGraph.svelte  WaterPortal.svelte  Welcome.svelte
src/chemistry_calculator_portal/src/routes/: +page.svelte  menu.ts
src/chemistry_calculator_portal/src/routes/mould_risk/: +page.svelte
src/chemistry_calculator_portal/src/routes/overview/: +page.svelte
src/chemistry_calculator_portal/src/routes/water_content/: +page.svelte
src/chemistry_calculator_portal/static/: custom.scss
src/chemistry_calculator_portal/static/themes/: cosmo.min.css  journal.min.css  litera.min.css  lumen.min.css  materia.min.css  minty.min.css  morph.min.css  pulse.min.css  quartz.min.css  simplex.min.css  superhero.min.css  united.min.css  vapor.min.css  yeti.min.css
